Modal-navbar z-indexing fix without -ve z-index

--- a/frontend/src/css/default.module.scss
+++ b/frontend/src/css/default.module.scss
@@ -204,6 +204,10 @@ a {
 }
 
 // modal
+.modalOverlayWrap > div {
+    // cannot use overlayClassName
+    z-index: 1000;
+}
 .modal {
     top: 50%;
     left: 50%;
